--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Algorithm Visualizer</title>
     <meta name="google-site-verification" content="U0HcC1QqpeETdDFvRvwuUEajTrZWKRoEBt6JR6H5vbo" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="sv-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="sv-removebg.png" type="image/x-icon">
 </head>
 
 <body> 
@@ -24,8 +24,8 @@
         </div>
     </header>
     <section class="main">
-        <video src="1st part (1).mp4" autoplay loop muted type="mp4"></video>
-        <img src="mask (1).jpg" class="mask">
+        <video src="1st part.mp4" autoplay loop muted type="mp4"></video>
+        <img src="mask.jpg" class="mask">
         <div class="heading">
             <marquee direction="right" behavior="alternate">
                 <h4>Algorithm</h4>
